--- a/src/index.html
+++ b/src/index.html
@@ -7,16 +7,18 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Prata&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Prata&family=Roboto:wght@300;400;500;700&display=swap"
+      rel="stylesheet">
   <title>Search repo</title>
 </head>
 <body>
-  <div class="container">
-    <form class="search">
-      <input class="search__input" type="text" placeholder="Введите название репозитория"/>
-      <input class="search__send-button" type="submit" value="Поиск"/>
-    </form>
-
-  </div>
+<div class="container">
+  <form class="search">
+    <input class="search__input" name="search-bar" type="text" placeholder="Введите название репозитория"/>
+    <input class="search__send-button" type="submit" value="Поиск"/>
+  </form>
+  <div class="repositories"></div>
+</div>
 </body>
 </html>
