--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,9 @@
 <body>
 <div class="container">
   <form class="search">
-    <input class="search__input" name="search-bar" type="text" placeholder="Введите название репозитория"/>
+    <div class="search__block">
+      <input class="search__input" name="search-bar" type="text" placeholder="Введите название репозитория"/>
+    </div>
     <input class="search__send-button" type="submit" value="Поиск"/>
   </form>
   <div class="repositories"></div>
